2012-06-25  Nick Carter  <nick@chromium.org>

        Reduce memory footprint of BitmapImage Vectors.
        https://bugs.webkit.org/show_bug.cgi?id=86563

        Reviewed by Simon Fraser.

        No new tests, affects template params only.

        * platform/graphics/BitmapImage.h:
        (BitmapImage): use an inline capacity of 1 for the image frame Vector 
        * platform/image-decoders/ImageDecoder.h:
        (ImageDecoder): use an inline capacity of 1 for the image frame Vector

2012-06-25  Kent Tamura  <tkent@chromium.org>

        Unreviewed, rolling out r121145.
        http://trac.webkit.org/changeset/121145
        https://bugs.webkit.org/show_bug.cgi?id=89847

        Had an objection for the change.

        * html/FormController.cpp:
        (WebCore):
        (WebCore::FormControlState::serializeTo):
        (WebCore::FormControlState::deserialize):
        (WebCore::formStateSignature):
        (WebCore::FormController::formElementsState):
        (WebCore::FormController::setStateForNewFormElements):
        * html/FormController.h:
        (FormControlState):
        * html/shadow/CalendarPickerElement.cpp:
        (WebCore::addJavaScriptString):

2012-06-25  Jay Civelli  <jcivelli@chromium.org>

        Fix progress load reporting for MHTML documents.

        MHTML documents containing references to resources they don't include
        never finish loading.
        https://bugs.webkit.org/show_bug.cgi?id=71859

        Reviewed by Nate Chapin.

        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::scheduleArchiveLoad):

2012-06-25  James Robinson  <jamesr@chromium.org>

        [chromium] Use WebGraphicsContext3D in compositor implementation
        https://bugs.webkit.org/show_bug.cgi?id=89700

        Reviewed by Adrienne Walker.

        This converts the compositor implementation from using WebCore::GraphicsContext3D to using the Platform-provided